<resources>
    <string name="app_name">自贸通客服端</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="token_volley_error">刷新token不成功.</string>
    <string name="home_me_approval">我审批的</string>
    <string name="home_me_start">我发起的</string>
    <string name="home_me_message">消息中心</string>
    <string name="home_me_customer">客户管理</string>
    <string name="home_me_orders">订单管理</string>
    <string name="home_me_Invoice">增票管理</string>
    <string name="home_me_bankSlip">水单管理</string>
    <string name="home_me_payment">付款管理</string>
    <string name="home_me_buyerCode">外商代码申请</string>
    <string name="home_me_LCLimit">中信保限额申请</string>
    <string name="home_me_InsureApply">中信保投保</string>
    <string name="home_me_BankApply">银行代码申请</string>
    <string name="Approve_item_UnApproval">未处理</string>
    <string name="Approve_item_Approval">已处理</string>
    <string name="Initiate_item_InApproval">审批中</string>
    <string name="Initiate_item_Approval">已通过</string>
    <string name="Initiate_item_UnApproval">未通过</string>
    <string name="Initiate_item_RepealApproval">已撤销</string>
    <string name="Approve_one">单据编号:</string>
    <string name="Approve_two">报审人员:</string>
    <string name="Approve_two2">审批状态:</string>
    <string name="Approve_three">报审时间:</string>
    <string name="Approve_more_one">展开</string>
    <string name="Approve_more_two">收起</string>
    <string name="toolbar_InitiateList">我发起</string>
    <string name="toolbar_IApproveList">我审批</string>
    <string name="toolbar_IApproveSearch">关键字搜索</string>
    <string name="toolbar_IApproveDetails">详情</string>
    <string name="toolbar_Message">消息列表</string>
    <string name="toolbar_MessageDetails">消息查看</string>
    <string name="toolbar_PhotoView">查看图片</string>
    <string name="toolbar_InvoiceList">增票管理</string>
    <string name="toolbar_InvoiceDetails">增票详情</string>
    <string name="toolbar_OrderList">订单管理</string>
    <string name="toolbar_OrderDetails">订单</string>
    <string name="toolbar_OrderServer">服务项</string>
    <string name="toolbar_OrderItemsAction">服务项状态</string>
    <string name="toolbar_CustomerList">客户管理</string>
    <string name="toolbar_CustomerList1">提款客户</string>
    <string name="toolbar_CustomerList2">收款单位</string>
    <string name="toolbar_CustomerList3">收款银行</string>
    <string name="toolbar_PaymentFinanceOrder">选择融资款订单</string>
    <string name="toolbar_PaymentOrder">选择资金订单</string>
    <string name="toolbar_CustomerNew">新建客户</string>
    <string name="toolbar_CustomerDetails">客户</string>
    <string name="toolbar_CustomerType">客户类型</string>
    <string name="toolbar_CustomerServerItem">客户服务项</string>
    <string name="toolbar_CustomerAttachment">文件</string>
    <string name="toolbar_CustomerAttachment1">客户附件</string>
    <string name="toolbar_CustomerVisit">访问记录</string>
    <string name="toolbar_CustomerBasic">详细信息</string>
    <string name="toolbar_CustomerCompany">往来单位</string>
    <string name="toolbar_CompanyDetails">往来单位详情</string>
    <string name="toolbar_Company_banks">银行信息</string>
    <string name="toolbar_BankSlipList">水单列表</string>
    <string name="toolbar_BankSlipDetails">水单详情</string>
    <string name="toolbar_BankSlipClaim">水单认领</string>
    <string name="toolbar_BankSlipOrder">水单拆分到订单</string>
    <string name="toolbar_PaymentList">付款管理</string>
    <string name="toolbar_PaymentDetails">付款单</string>
    <string name="toolbar_PaymentNew">代客提款</string>
    <string name="toolbar_paymentNewGuarantee">担保方式</string>
    <string name="toolbar_paymentNewMethod">付款方式</string>
    <string name="toolbar_paymentNewSubType">费用方式</string>
    <string name="toolbar_company_buyer_code">外商代码申请</string>
    <string name="toolbar_company_LCLimit">中信保限额申请</string>
    <string name="toolbar_company_BankApply">银行代码申请</string>
    <string name="toolbar_company_InsureApply">中信保投保</string>
    <string name="toolbar_company_LCLimit_Detail">限额详情</string>
    <string name="toolbar_company_Insure_Detail">投保详情</string>
    <string name="toolbar_company_BuyerCode_details">外商代码详情</string>
    <string name="toolbar_company_reply">中信保批复情况</string>
    <string name="toolbar_SettingAbout">关于</string>
    <string name="toolbar_SettingAbout_server">服务器信息</string>
    <string name="toolbar_SettingPhrase">快捷短语设置</string>
    <string name="toolbar_SettingServer">服务器</string>
    <string name="toolbar_SettingPermission">权限查看</string>
    <string name="Customer_one">客户编码：</string>
    <string name="Customer_two">已通过</string>
    <string name="Customer_three">资金信息</string>
    <string name="Customer_four">普通账户</string>
    <string name="Customer_five">融资账户</string>
    <string name="Customer_six">融资欠款</string>
    <string name="Customer_seven">总开票额</string>
    <string name="Customer_eight">访问记录</string>
    <string name="Customer_nine">查看客户的访问记录</string>
    <string name="Customer_ten">详细信息</string>
    <string name="Customer_eleven">查看客户详细信息</string>
    <string name="Customer_fifteen">附件信息</string>
    <string name="Customer_sixteen">附件的上传与查看</string>
    <string name="Customer_twelve">往来单位</string>
    <string name="Customer_thirteen">查看客户往来单位信息</string>
    <string name="Customer_fourteen">●</string>
    <string name="Customer_attach_one">没有附件信息</string>
    <string name="Customer_visit_one">赵兰兰</string>
    <string name="Customer_visit_two">2016-08-26 14:21:34</string>
    <string name="Customer_visit_three">这是一条访问记录.</string>
    <string name="Company_bank_one">银行信息</string>
    <string name="Company_bank_two">客户</string>
    <string name="Company_bank_three">往来单位</string>
    <string name="Company_bank_four">账户状态</string>
    <string name="Company_bank_five">开户银行</string>
    <string name="Company_bank_six">银行账号</string>
    <string name="Company_bank_seven">Swift编号</string>
    <string name="Customer_new_one">客户名称</string>
    <string name="Customer_new_two">取消</string>
    <string name="Customer_new_three">选择客户类型</string>
    <string name="Customer_new_four">客户类型</string>
    <string name="Customer_new_five">客户编码</string>
    <string name="Customer_new_six">客户登录名默认为客户编码,</string>
    <string name="Customer_new_seven">客户登录密码默认为:123456.</string>
    <string name="Customer_new_eight">联系人</string>
    <string name="Customer_new_nine">电话</string>
    <string name="Customer_new_ten">邮箱</string>
    <string name="Customer_new_eleven">服务项</string>
    <string name="Customer_new_fifteen">创建</string>
    <string name="Order_one">订单号：</string>
    <string name="Order_two">已通过</string>
    <string name="Order_three">报关金额</string>
    <string name="Order_four">下单时间：</string>
    <string name="Order_five">客户</string>
    <string name="Order_six">杭州全顺科技</string>
    <string name="Order_seven">张三 - 15068337461</string>
    <string name="Order_eight">收支状态</string>
    <string name="Order_nine">收入</string>
    <string name="Order_ten">收汇金额 RMB</string>
    <string name="Order_eleven">退税金额 RMB</string>
    <string name="Order_twelve">支出</string>
    <string name="Order_thirteen">付款合计 RMB</string>
    <string name="Order_fourteen">费用合计 RMB</string>
    <string name="Order_fifteen">利润：</string>
    <string name="Order_sixteen">服务项信息</string>
    <string name="Order_seventeen">结算单</string>
    <string name="Invoice_one">不含税金额</string>
    <string name="Invoice_two">税额</string>
    <string name="Invoice_three">价税合计</string>
    <string name="Invoice_four">开票日期：</string>
    <string name="Invoice_five">增票代码：</string>
    <string name="Invoice_six">增票号码：</string>
    <string name="Invoice_seven">订单号码：</string>
    <string name="Invoice_eight">商品列表（</string>
    <string name="Invoice_nine">条商品记录）</string>
    <string name="Invoice_list_one">税率：</string>
    <string name="Invoice_list_two">单价</string>
    <string name="Invoice_list_three">数量</string>
    <string name="Invoice_list_four">@string/Invoice_one</string>
    <string name="Invoice_list_five">@string/Invoice_two</string>
    <string name="Invoice_list_six">价税合计：</string>
    <string name="BankSlip_one"> 付 款 人：</string>
    <string name="BankSlip_two">收汇日期：</string>
    <string name="BankSlip_three">收汇金额</string>
    <string name="BankSlip_four">- 国内费用</string>
    <string name="BankSlip_five">- 国外费用</string>
    <string name="BankSlip_six">净收汇金额：</string>
    <string name="BankSlip_seven">银行结算汇率：</string>
    <string name="BankSlip_eight">折RMB：</string>
    <string name="BankSlip_nine">客户认领（已完成认领）</string>
    <string name="BankSlip_nine_one">客户认领（暂未认领）</string>
    <string name="BankSlip_nine_two">客户认领（未认领金额：</string>
    <string name="BankSlip_nine_three">）</string>
    <string name="BankSlip_list_one">认领金额</string>
    <string name="BankSlip_list_two">客户结算汇率</string>
    <string name="BankSlip_list_three">折RMB：</string>
    <string name="BankSlip_list_four">认领时间：</string>
    <string name="BankSlip_list_five">未拆分</string>
    <string name="BankSlip_list_six">条订单</string>
    <string-array name="bank_slips_option">
        <item>@string/bank_slips_option</item>
        <item>@string/bank_slips_option1</item>
    </string-array>
    <string name="bank_slips_option1">已认领</string>
    <string name="bankSlip_one">宁波市镇海顺远箱包有限公司</string>
    <string name="bankSlip_two">未认领金额 </string>
    <string name="bankSlip_three">银行结算汇率</string>
    <string name="bankSlip_four">净收汇：</string>
    <string name="bankSlip_five">认领金额 </string>
    <string name="bankSlip_six">客户结算汇率</string>
    <string name="bankSlip_seven">认领时间：</string>
    <string name="bankClaim_one">水单认领</string>
    <string name="bankClaim_two">取消 </string>
    <string name="bankClaim_three">选择认领的客户</string>
    <string name="bankClaim_four">客户</string>
    <string name="bankClaim_five">认领金额  (USD)</string>
    <string name="bankClaim_six">请输入认领金额</string>
    <string name="bankClaim_six_1">请输入汇率</string>
    <string name="bankClaim_seven">剩余可认领：</string>
    <string name="bankClaim_eight">全部认领</string>
    <string name="bankClaim_nine">客户结算汇率</string>
    <string name="bankClaim_eleven">银行结算汇率：</string>
    <string name="bankClaim_twelve">折人民币：</string>
    <string name="bankClaim_thirteen">认领</string>
    <string name="Payment_new_one">提款客户</string>
    <string name="Payment_new_two">付款方式与类型</string>
    <string name="Payment_new_three">付款方式</string>
    <string name="Payment_new_four">担保方式</string>
    <string name="Payment_new_five">资金来源</string>
    <string name="Payment_new_six">App端暂不支持融资账户的提款。</string>
    <string name="Payment_new_seven">下一步（1/3）</string>
    <string name="Payment_new_eight">收款单位</string>
    <string name="Payment_new_nine">收款银行</string>
    <string name="Payment_new_ten">下一步（2/3）</string>
    <string name="Payment_new_eleven">币别与汇率</string>
    <string name="Payment_new_twelve">币别</string>
    <string name="Payment_new_thirteen">汇率</string>
    <string name="Payment_new_fourteen">提款金额</string>
    <string name="Payment_new_fifteen">支付金额</string>
    <string name="Payment_new_sixteen">结算金额</string>
    <string name="Payment_new_seventeen">是否将金额拆分到具体订单？</string>
    <string name="Payment_new_eighteen">金额拆分到订单</string>
    <string name="Payment_new_nineteen">提交提款申请（3/3）</string>
    <string name="Payment_new_twenty">添加订单</string>
    <string name="Payment_new_twenty_one">点击添加拆分的订单</string>
    <string name="Payment_five">2016-08-16</string>
    <string name="list_Payment_one">宁波市江北德波尔电器有限公司</string>
    <string name="list_Payment_two">已通过</string>
    <string name="list_Payment_three">费用-报关费</string>
    <string name="list_Payment_four">申请时间：</string>
    <string name="setting_About_one">当前版本</string>
    <string name="setting_About_two">Version 0.1.0(181)</string>
    <string name="setting_About_three">去评分</string>
    <string name="setting_About_four">服务条款</string>
    <string name="setting_About_five">关于APP</string>
    <string name="setting_About_six">关于公司</string>
    <string name="setting_About_seven">检查更新</string>
</resources>